    - remove build dep dh-autoreconf and cython
    - add build dep python3-doc, python-numpy-doc, python-scipy-doc and
      python-matplotlib-doc for intersphinx mappings
    - switch to Python 3 doc build dep
    - bump standard to 4.2.1
  * d/patches
    - add no-download-intersphinx-mapping.patch
    - update deb_use_system_joblib to fix test failure
    - update deb_no_online_jquery

 -- Yangfl <mmyangfl@gmail.com>  Thu, 18 Oct 2018 12:37:47 +0800

scikit-learn (0.19.2-1) unstable; urgency=medium

  * Fresh upstream bugfix release (Closes: #904636)
    - supports Python 3.7
  * debian/control
    - removed transitional python-scikits-learn (Closes: #878863)

 -- Yaroslav Halchenko <debian@onerussian.com>  Thu, 26 Jul 2018 10:12:10 -0400

scikit-learn (0.19.1-4) unstable; urgency=medium

  * debian/control
    - build-depends on python-pil not deprecating -imaging (Closes: #894526)

 -- Yaroslav Halchenko <debian@onerussian.com>  Sun, 08 Apr 2018 10:02:12 -0400

scikit-learn (0.19.1-3) unstable; urgency=medium

  * debian/patches/changeset_6c99d797d7c71d216503612a242bffb8d006582d.diff
    to avoid regression due to forgotten in the release fix
    (see https://github.com/scikit-learn/scikit-learn/issues/9393)
    It seems that the issue is not deterministic, and although did not
    reveal itself on a buildd server, might come back.

 -- Yaroslav Halchenko <debian@onerussian.com>  Thu, 04 Jan 2018 08:02:20 -0500

scikit-learn (0.19.1-2) unstable; urgency=medium

  * debian/patches/deb_precisionloss
    - to mitigate a minor failing unittest on BE platforms
      (Closes: #883473)
  * debian/control
    - boosted policy to 4.1.2 (if something to be done, report a bug)

 -- Yaroslav Halchenko <debian@onerussian.com>  Mon, 04 Dec 2017 22:42:37 -0500

scikit-learn (0.19.1-1) unstable; urgency=medium

  * Fresh upstream release

 -- Yaroslav Halchenko <debian@onerussian.com>  Mon, 23 Oct 2017 15:59:32 -0400

scikit-learn (0.19.0-1) unstable; urgency=medium
