@@ -1,133 +1,150 @@
 #!/usr/bin/make -f
 # -*- mode: makefile; coding: utf-8 -*-
 
-PACKAGE2_NAME = python-sklearn
-PACKAGE3_NAME = python3-sklearn
-PACKAGE2_ROOT_DIR = debian/${PACKAGE2_NAME}
-PACKAGE3_ROOT_DIR = debian/${PACKAGE3_NAME}
+# See also: skimage
 
-PYVERS = $(shell pyversions -vr)
-PYVER = $(shell pyversions  -vd)
+PY2VERS = $(shell pyversions -vr)
 PY3VERS = $(shell py3versions -vr)
 PY3VER = $(shell py3versions -vd)
 
-SPHINX_VER := $(shell python -c 'from sphinx import __version__; print __version__')
-NODOC = $(shell dpkg --compare-versions $(SPHINX_VER) lt 1.1.3 && echo "nodoc" || echo "")
-export DEB_BUILD_OPTIONS += $(NODOC)
+export DEB_BUILD_MAINT_OPTIONS := hardening=+all
 
-MIN_CYTHONVER = 0.24
+export DEB_CFLAGS_MAINT_APPEND :=
+export DEB_LDFLAGS_MAINT_APPEND := -Wl,--as-needed
 
-CYTHON_VER := $(shell dpkg -l cython 2>/dev/null | awk '/^ii/{print $$3;}' || echo 0)
-RECONF = $(shell dpkg --compare-versions $(CYTHON_VER) ge $(MIN_CYTHONVER) && echo ",autoreconf" || echo "")
+ifneq (,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
+  JOBS = $(patsubst parallel=%,%,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
+else
+  JOBS = 1
+endif
+export JOBS := $(JOBS)
+
+include /usr/share/dpkg/architecture.mk
+
+PYBUILD_TEST_ARGS :=
 
 # Some tests are known to fail randomly so need to be excluded ATM
-# A bit aggressive exclusion of some tests which exhibit a problem I have no time to deal with on arm64
-NOSEARGS := $(shell dpkg --print-architecture | grep -q -v arm64 || echo --exclude='test_dump')
-# https://github.com/scikit-learn/scikit-learn/issues/7544
-NOSEARGS += $(shell dpkg --print-architecture | grep -q -v i386 || echo --exclude='test_gpr')
-# https://github.com/scikit-learn/scikit-learn/issues/7572
-NOSEARGS += $(shell dpkg --print-architecture | grep -q -v armel || echo --exclude='test_matthews_corrcoef')
-# --exclude='test_(sparse_svc_clone_with_callable_kernel|spectral_clustering_sparse|ovr_fit_predict)'
-# https://buildd.debian.org/status/fetch.php?pkg=scikit-learn&arch=ppc64el&ver=0.18-3&stamp=1475603905
-NOSEARGS += $(shell dpkg --print-architecture | grep -q -v ppc64el || echo --exclude='test_non_meta_estimators')
+ifeq ($(DEB_HOST_ARCH),arm64)
+  # A bit aggressive exclusion of some tests which exhibit a problem I have no time to deal with on arm64
+  PYBUILD_TEST_ARGS += -k-test_dump
+endif
+ifeq ($(DEB_HOST_ARCH),i386)
+  # https://github.com/scikit-learn/scikit-learn/issues/7544
+  PYBUILD_TEST_ARGS += -k-test_gpr
+endif
+ifeq ($(DEB_HOST_ARCH),armel)
+  # https://github.com/scikit-learn/scikit-learn/issues/7572
+  PYBUILD_TEST_ARGS += -k-test_matthews_corrcoef
+endif
+ifeq ($(DEB_HOST_ARCH),ppc64el)
+  # --exclude='test_(sparse_svc_clone_with_callable_kernel|spectral_clustering_sparse|ovr_fit_predict)'
+  # https://buildd.debian.org/status/fetch.php?pkg=scikit-learn&arch=ppc64el&ver=0.18-3&stamp=1475603905
+  PYBUILD_TEST_ARGS += -k-test_non_meta_estimators
+endif
 
+# fetch_california_housing -> Downloading Cal. housing
+PYBUILD_TEST_ARGS += -k-test_feature_importance_regression
+
+export PYBUILD_TEST_PYTEST := 1
+# python2 soon deprecated -- doc unreliable
+export PYBUILD_TEST_ARGS_python2 := $(PYBUILD_TEST_ARGS)
+export PYBUILD_TEST_ARGS_python3 := $(PYBUILD_TEST_ARGS) --doctest-modules
+export JOBLIB_MULTIPROCESSING := $(shell expr $(JOBS) / $$(expr $(words $(PY2VERS)) + $(words $(PY3VERS))))
 
 # try to prevent unsunctioned downloads
-export  http_proxy=http://127.0.0.1:9/
-export  https_proxy=http://127.0.0.1:9/
+export http_proxy=http://127.0.0.1:9/
+export https_proxy=http://127.0.0.1:9/
 
-# Mega rule
+
 %:
-	: # Explicit build system to avoid use of all-in-1 Makefile
-	dh $@ --buildsystem=python_distutils --with python2,python3$(RECONF)
+	dh $@ --with python2,python3,sphinxdoc --buildsystem pybuild
 
-clean_generated:
-	find sklearn/ -regex '.*\.c\(\|pp\)' | xargs grep -l -e 'Generated by Cython'  | xargs -r rm -f
+%-arch:
+	dh $@ --with python2,python3 --buildsystem pybuild
 
-_cythonize%: clean_generated
-	debian/rules clean_generated # force removal of previous copies
-	python$(*:2=) setup.py build_src
-	D=debian/cythonized-files$(*:2=) && \
-		git rm -rf $$D; \
-		find sklearn/ -regex '.*\.c\(\|pp\)' | while read f; do \
-			grep -q 'Generated by Cython' "$$f" || continue; \
-			mkdir -p "$$D/$$(dirname $$f)"; \
-			cp "$$f" "$$D/$$(dirname $$f)"; \
-			git add -f "$$D/$$f"; \
-		done; \
-		echo "$(UVER)" >| $$D/VERSION; git add $$D/VERSION
+clean:
+	dh $@ --with python2,python3 --buildsystem pybuild
 
-_uncythonize%:
-	echo "$*" | grep -q '^3' && PY=3 || PY= ; \
-	CYTHONVER=$$(dpkg -l cython$$PY 2>/dev/null | awk '/^ii/{print $$3;}' || echo 0); \
-	dpkg --compare-versions "$$CYTHONVER" lt "$(MIN_CYTHONVER)" && { \
-		echo "I: Using pre-Cython-ed files for Python $*"; \
-		touch PKG-INFO; \
-		cd debian/cythonized-files$$PY/ ; \
-		find . -regex '.*\.c\(\|pp\)' | while read f; do cp $$f ../../$$f; done; } || :
+# silly distutils does not support parallelism! waste hours of time
+.PHONY: build
+build-arch: $(addprefix debian/build-stamp-python,$(PY2VERS)) $(addprefix debian/build-stamp-python,$(PY3VERS))
+	:
+build build-indep: build-arch doc/_build/html
+	:
 
-cythonize: _cythonize2 _cythonize3
-
-override_dh_auto_configure: _uncythonize2 _uncythonize3
-	dh_auto_configure
-
-override_dh_autoreconf:
-	dh_autoreconf debian/rules -- clean_generated
+debian/build-stamp-python%: debian/build-stamp-pyx
+	PYBUILD_INTERPRETERS=python{version} PYBUILD_VERSIONS=$* dh build-arch --with python$(basename $*) --buildsystem pybuild
+	touch $@
 
 override_dh_clean:
-	rm -rf build doc/_build doc/auto_examples *-stamp *.egg-info sklearn/datasets/__config__.py
 	dh_clean
-
-override_dh_auto_install: ${PYVERS:%=python-install%} ${PY3VERS:%=python-install%} ${PYVERS:%=python-test%} ${PY3VERS:%=python-test%}
-# Per Python version logic -- install, test, move .so into -lib
-python-install%: _uncythonize%
-	python$* setup.py install --install-layout=deb  --root=$(CURDIR)/debian/tmp
-
-python-test%: python-install%
-ifeq (,$(filter nocheck,$(DEB_BUILD_OPTIONS)))
-	: # Run unittests here against installed scikits.learn
-	echo "$*" | grep -q '^3' && PY=3 || PY=$*; \
-	export PYTHONPATH=`/bin/ls -d $$PWD/debian/tmp/usr/lib/python$$PY/*/`; \
-	export MPLCONFIGDIR=$(CURDIR)/build HOME=$(CURDIR)/build; \
-	export JOBLIB_MULTIPROCESSING=2; \
-	cd build/; python$* -m pytest -s -v $(PYTESTARGS) sklearn && \
-	  { python$* -m pytest -v --with-doctest --doctest-extension=rst ../doc/ || : ; } # doctests are failing ATM
-else
-	: # Skip unittests due to nocheck
+	rm -rf .pytest_cache build scikit_learn.egg-info
+	-mv PKG-INFO-BAK PKG-INFO
+	rm -f debian/build-stamp-*
+	for i in $$(find -name '*.pyx'); do \
+		rm -f $${i%.*}.c $${i%.*}.cpp; \
+	done
+	for i in $$(find -name '*.pyx.in'); do \
+		rm -f $${i%.*}; \
+	done
+ifeq (,$(findstring -a,$(DH_INTERNAL_OPTIONS)))
+ifeq (,$(filter nodoc,$(DEB_BUILD_OPTIONS)))
+	+$(MAKE) -C doc clean
+endif
 endif
 
+debian/build-stamp-pyx:
+	-mv PKG-INFO PKG-INFO-BAK
+	python3 setup.py config
+	mv PKG-INFO-BAK PKG-INFO
+	touch $@
+
+doc/_build/html: debian/build-stamp-python$(PY3VER)
+ifeq (,$(filter nodoc,$(DEB_BUILD_OPTIONS)))
+	# urllib.error.URLError -- have to ignore
+	# hotfix SPHINXOPTS -- remove in next release
+	-+\
+		PYTHONPATH=$(CURDIR)/.pybuild/cpython3_$(PY3VER)/build:$$(python3 -c 'import sys;print(":".join(sys.path))') \
+		SPHINXBUILD="python$(PY3VER) -m sphinx -j $(JOBS) -D mathjax_path=MathJax.js" \
+		SPHINXOPTS="-j $(JOBS) -D mathjax_path=MathJax.js" \
+		$(MAKE) -C doc html
+endif
+
+# Test data not copied to .pybuild -- manually link for them
+override_dh_auto_test-arch:
+	for ver in $(PYBUILD_VERSIONS); do \
+		i=.pybuild/cpython$${ver%.*}_$$ver/build/sklearn; \
+		for dir in data descr images; do \
+			rm -rf $$i/datasets/$$dir || true; \
+			ln -s ../../../../../sklearn/datasets/$$dir $$i/datasets; \
+		done; \
+		rm -rf $$i/datasets/tests/data || true; \
+		ln -s ../../../../../../sklearn/datasets/tests/data $$i/datasets/tests; \
+	done
+	dh_auto_test
+
+override_dh_auto_install:
+	dh_auto_install
+	# cleanup python3 cache (mixing python3 subversions)
+	-find debian/tmp -name "__pycache__" -exec rm -r {} +
 
 override_dh_installdocs:
-	: # Build Documentation using installed scikits.learn
-ifeq (,$(filter nodoc,$(DEB_BUILD_OPTIONS)))
-ifneq (,$(findstring -a,$(DH_INTERNAL_OPTIONS)))
-	: # not building documentation in -a
-else
-	export PYTHONPATH=`/bin/ls -d $$PWD/debian/tmp/usr/lib/python$(PYVER)/*`; \
-	export MPLCONFIGDIR=$(CURDIR)/build HOME=$(CURDIR)/build; \
-	 cd doc; $(MAKE) html
-endif
-else
-	mkdir -p doc/_build/html
-	echo "<HTML><BODY><P>sklearn documentation was not built.<P>Please visit <A HREF='http://scikit-learn.org'>http://scikit-learn.org</A></BODY></HTML>" >| doc/_build/html/index.html
-endif
-	: # Use jquery from Debian package, so prune shipped one
-	-rm doc/_build/html/stable/_static/jquery.js
-	-rm doc/_build/html/stable/_static/underscore.js
-	dh_installdocs -A AUTHORS.rst README*.rst
+	dh_installdocs -A README*.rst
+	mv \
+		debian/python-sklearn-doc/usr/share/doc/python-sklearn-doc/stable \
+		debian/python-sklearn-doc/usr/share/doc/python-sklearn-doc/html
 
 override_dh_installchangelogs:
 	dh_installchangelogs doc/whats_new.rst
 
-## remove .so libraries from main package, and call dh_numpy*
 ## while removing 2 if not present
 _dh_python%:
-	[ ! -e debian/python$(*:2=)-sklearn ] \
-	    || find debian/python$(*:2=)-sklearn/usr/lib -name "*.so" -delete;
-	[ -e /usr/bin/dh_numpy$(*:2=) ] && dh_numpy$(*:2=) -ppython$(*:2=)-sklearn-lib || :
-	: # Prune scikits/__init__.py to avoid conflicts
+	# remove .so libraries from main package, and call dh_numpy*
+	-find debian/python$(*:2=)-sklearn/usr/lib -name "*.so" -delete;
+	dh_numpy$(*:2=) -ppython$(*:2=)-sklearn-lib
+	# Prune scikits/__init__.py to avoid conflicts
 	find debian -wholename \*scikits/__init__.py -delete
-	: # Move scikits. space into a compatibility package
+	# Move scikits. space into a compatibility package
 	if [ $* -eq 2 ]; then \
 	set -e; \
 	find debian -wholename \*scikits -type d | while read skd; do \
@@ -146,6 +163,11 @@ override_dh_python3: _dh_python3
 ## immediately useable documentation and exemplar scripts/data
 override_dh_compress:
 	dh_compress -X.py -X.html -X.pdf -X.css -X.jpg -X.txt -X.js -X.json -X.rtc -Xobjects.inv
+
+override_dh_sphinxdoc-indep:
+ifeq (,$(filter nodoc,$(DEB_BUILD_OPTIONS)))
+	dh_sphinxdoc -XMathJax.js -Xjquery.js
+endif
 
 
 ## to prepare next Debian upstream source tarball
